--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src="https://upload.wikimedia.org/wikipedia/commons/1/18/Dog_Breeds.jpg" alt="dogimage"/>
     <script type="text/javascript" src="./script.js">
 </script>
 
